Add more 8급 content and a support page

--- a/_posts/2021-01-01-guide.md
+++ b/_posts/2021-01-01-guide.md
@@ -6,4 +6,21 @@ categories:
 permalink: "/guide/"
 ---
 
-Content here later
+Disclaimer: I am not a Korean teacher. This guide is based on my personal experience, and the advice below may not be relevant to your situation. 
+
+**What is hanja?**
+
+
+**Do I need to learn hanja in order to learn Korean?**
+
+
+**Why do you put so much effort into learning hanja if it is not required?**
+Because it has helped me learn new vocabulary at a much faster rate. I was stuck at the intermediate levels of spoken and written Korean for half my life, and it wasn't until I started learning hanja that I finally broke through. Around the time I reached the 6급 characters, I noticed I was able to read news articles and listen to formal speeches with relative ease.
+
+**Who should learn hanja?**
+
+
+**When will I start to see results?**
+
+
+
