--- a/_posts/8급/02/8000-02-04-年.md
+++ b/_posts/8급/02/8000-02-04-年.md
@@ -1,12 +1,12 @@
 ---
 layout: post
-title:  "temp"
+title:  "年"
 date:   2021-05-04 11:47:10 -0700
 categories: 8급
 permalink: "/:categories/:title"
 ---
 
-Korean name: 
+Korean name: 해 년
 
 Meaning: 
 
