--- a/_posts/8급/02/8000-02-05-大.md
+++ b/_posts/8급/02/8000-02-05-大.md
@@ -8,21 +8,23 @@ permalink: "/:categories/:title"
 
 Korean name: 큰 대
 
-Meaning: 
+Meaning: big, excessive, high, excellent, impressive
 
 Examples:
-*  <br><br>
-*  <br><br>
-*  <br><br>
-*  <br><br>
-*  <br><br>
-*  <br><br>
-*  <br><br>
-*  <br><br>
-*  <br><br>
-*  <br><br>
-*  <br><br>
-*  <br><br>
-*  <br><br>
-*  <br><br>
-*  <br><br>
+* 관대하다 (寬大하다) open minded, tolerant <br><br>
+* 대기업 (大企業) large corporation <br><br>
+* 대규모 (大規模) large scale <br><br>
+* 대다수 (大多數) great majority (of) <br><br>
+* 대량 (大量) large quantity <br><br>
+* 대륙 (大陸) continent <br><br>
+* 대법원 (大法院) supreme court, the highest court <br><br>
+* 대부분(大部分) 1. (n) majority; 2. (adv) mostly, largely <br><br>
+* 대사 (大使) ambassador <br><br>
+* 대선 (大選) presidential election <br><br>
+* 대설 (大雪) big snowfall <br><br>
+* 대통령(大統領) a president of a nation <br><br>
+* 대학교(大學校) university <br><br>
+* 대형 (大型) large in size or scale <br><br>
+* 막대하다 (莫大하다) extremely large or numerous <br><br>
+* 최대 (最大) the most, the largest, maximum <br><br>
+* 확대 (擴大, (廓大) expansion, enlargement <br><br>
