--- a/_posts/8급/03/8000-03-02-六.md
+++ b/_posts/8급/03/8000-03-02-六.md
@@ -8,21 +8,8 @@ permalink: "/:categories/:title"
 
 Korean name: 여섯 륙
 
-Meaning: 
+Meaning: six, sixth
 
 Examples:
-*  <br><br>
-*  <br><br>
-*  <br><br>
-*  <br><br>
-*  <br><br>
-*  <br><br>
-*  <br><br>
-*  <br><br>
-*  <br><br>
-*  <br><br>
-*  <br><br>
-*  <br><br>
-*  <br><br>
-*  <br><br>
-*  <br><br>
+* 육각형 (六角形) hexagon <br><br>
+* 육감 (六感) sixth sense; that is, the feeling or intuition one experiences that cannot be explained through the five senses <br><br>
