--- a/_posts/8급/03/8000-03-04-母.md
+++ b/_posts/8급/03/8000-03-04-母.md
@@ -6,23 +6,21 @@ categories: 8급
 permalink: "/:categories/:title"
 ---
 
-Korean name: 어미 모
+Korean name: 어머니 모
 
-Meaning: 
+Meaning: mother, a woman of a mother's age
 
 Examples:
-*  <br><br>
-*  <br><br>
-*  <br><br>
-*  <br><br>
-*  <br><br>
-*  <br><br>
-*  <br><br>
-*  <br><br>
-*  <br><br>
-*  <br><br>
-*  <br><br>
-*  <br><br>
-*  <br><br>
-*  <br><br>
-*  <br><br>
+* 계모 (繼母) stepmother <br><br>
+* 고모 (姑母) paternal aunt <br><br>
+* 노모 (老母) a mother of advanced age <br><br>
+* 모교 (母校) alma mater <br><br>
+* 모국 (母國) mother country <br><br>
+* 모녀 (母女) mother and daughter <br><br>
+* 모성 (母性) a mother's instinct <br><br>
+* 모유 (母乳) breastmilk <br><br>
+* 모음 (母音) vowel <br><br>
+* 모자 (母子) mother and son <br><br>
+* 모태 (母胎) mother's womb <br><br>
+* 부모 (父母) parents <br><br>
+* 조모 (祖母) grandmother <br><br>
