--- a/_posts/8급/03/8000-03-05-木.md
+++ b/_posts/8급/03/8000-03-05-木.md
@@ -8,21 +8,11 @@ permalink: "/:categories/:title"
 
 Korean name: 나무 목
 
-Meaning: 
+Meaning: wood, lumber
 
 Examples:
-*  <br><br>
-*  <br><br>
-*  <br><br>
-*  <br><br>
-*  <br><br>
-*  <br><br>
-*  <br><br>
-*  <br><br>
-*  <br><br>
-*  <br><br>
-*  <br><br>
-*  <br><br>
-*  <br><br>
-*  <br><br>
-*  <br><br>
+* 목공 (木工) carpentry <br><br>
+* 목기 (木器) wooden bowl <br><br>
+* 목성 (木星) Jupiter <br><br>
+* 목수 (木手) carpenter <br><br>
+* 목화 (木花) cotton <br><br>
