test permalink change

--- a/_posts/8급/04/8000-04-01-門.md
+++ b/_posts/8급/04/8000-04-01-門.md
@@ -14,7 +14,7 @@ Examples:
 * 가문 (家門) family clan <br><br>
 * 교문 (校門) school door<br><br>
 * 명문 (名門) 1. a reputable family; 2. a prestigious school <br><br>
-* 문벌 (門閥 lineage, pedigree <br><br>
+* 문벌 (門閥) lineage, pedigree <br><br>
 * 방문 (房門) room door <br><br>
 * 부문 (部門) division, field <br><br>
 * 전문 (專門) specialty, expertise <br><br>
