--- a/_posts/8급/01/8000-01-04-國.md
+++ b/_posts/8급/01/8000-01-04-國.md
@@ -3,7 +3,7 @@ layout: post
 title:  "國"
 date:   2021-05-04 11:47:10 -0700
 categories: 8급
-permalink: "/:categories/:title"
+permalink: "/:categories/:title.html"
 ---
 
 Korean name: 나라 국
