--- a/_posts/8급/04/8000-04-04-父.md
+++ b/_posts/8급/04/8000-04-04-父.md
@@ -3,26 +3,21 @@ layout: post
 title:  "父"
 date:   2021-05-04 11:47:10 -0700
 categories: 8급
-permalink: "/:categories/:title"
+permalink: "/:categories/:title.html"
 ---
 
-Korean name: 
+Korean name: 아버지 부
 
-Meaning: 
+Meaning: father, elder
 
 Examples:
-*  <br><br>
-*  <br><br>
-*  <br><br>
-*  <br><br>
-*  <br><br>
-*  <br><br>
-*  <br><br>
-*  <br><br>
-*  <br><br>
-*  <br><br>
-*  <br><br>
-*  <br><br>
-*  <br><br>
-*  <br><br>
-*  <br><br>
+* 가부장 (家父長) patriarch <br><br>
+* 가부장 제도 (家父長 制度) patriarchy <br><br>
+* 계부 (繼父) stepfather <br><br>
+* 대부 (代父) godfather <br><br>
+* 부녀 (父女) father and daughter <br><br>
+* 부모 (父母) parents <br><br>
+* 부자 (父子) father and son <br><br>
+* 사부 (師父) (honorific) teacher, mentor <br><br>
+* 신부 (神父) Catholic priest <br><br>
+* 어부 (漁父) fisherman <br><br>
