--- a/_posts/8급/04/8000-04-05-北.md
+++ b/_posts/8급/04/8000-04-05-北.md
@@ -3,26 +3,22 @@ layout: post
 title:  "北"
 date:   2021-05-04 11:47:10 -0700
 categories: 8급
-permalink: "/:categories/:title"
+permalink: "/:categories/:title.html"
 ---
 
-Korean name: 
+Korean name: 북녘 북, 달아날 배
 
-Meaning: 
+Meaning: north (북), northward (북), to escape (배)
 
 Examples:
-*  <br><br>
-*  <br><br>
-*  <br><br>
-*  <br><br>
-*  <br><br>
-*  <br><br>
-*  <br><br>
-*  <br><br>
-*  <br><br>
-*  <br><br>
-*  <br><br>
-*  <br><br>
-*  <br><br>
-*  <br><br>
-*  <br><br>
+* 남북(南北) 1. north and south; 2. North and South Korea <br><br>
+* 납북 (拉北) being abducted and taken to North Korea <br><br>
+* 대북 (對北) relating to North Korea <br><br>
+* 대북방송 (對北放送) North Korean broadcast <br><br>
+* 북극 (北極) North Pole <br><br>
+* 북극성 (北極星) Polaris, the North Star <br><br>
+* 북방 (北方) northern direction <br><br>
+* 북부 (北部) northern part of a region <br><br>
+* 북한 (北韓) North Korea <br><br>
+* 탈북 (脫北) defection from North Korea <br><br>
+* 패배 (敗北) loss in a fight or war, etc. <br><br>
