--- a/_posts/8급/03/8000-03-04-母.md
+++ b/_posts/8급/03/8000-03-04-母.md
@@ -3,7 +3,7 @@ layout: post
 title:  "母"
 date:   2021-05-04 11:47:10 -0700
 categories: 8급
-permalink: "/:categories/:title"
+permalink: "/:categories/:title.html"
 ---
 
 Korean name: 어머니 모
