--- a/_posts/8급/04/8000-04-01-門.md
+++ b/_posts/8급/04/8000-04-01-門.md
@@ -3,7 +3,7 @@ layout: post
 title:  "門"
 date:   2021-05-04 11:47:10 -0700
 categories: 8급
-permalink: "/:categories/:title"
+permalink: "/:categories/:title.html"
 ---
 
 Korean name: 문 문
