--- a/_posts/8급/8000-12-31-template.md
+++ b/_posts/8급/8000-12-31-template.md
@@ -3,7 +3,7 @@ layout: post
 title:  "temp"
 date:   2021-05-04 11:47:10 -0700
 categories: 8급
-permalink: "/:categories/:title"
+permalink: "/:categories/:title.html"
 ---
 
 Korean name: 
