--- a/_posts/준7급/7500-01-01-toc.md
+++ b/_posts/준7급/7500-01-01-toc.md
@@ -6,7 +6,7 @@ categories: 준7급
 permalink: "/:categories/toc"
 ---
 
-
+(Characters are listed alphabetically by their Korean sound.)
 
 <style type="text/css">
 .tg  {border-collapse:collapse;border-spacing:0;}
