complete 45/50 characters in 8급

--- a/_posts/6급/11/6000-11-04-油.md
+++ b/_posts/6급/11/6000-11-04-油.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "由"
+title:  "油"
 date:   2021-05-04 11:47:10 -0700
 categories: 6급
 permalink: "/:categories/:title.html"
