complete 50/50 characters in 8급

--- a/_posts/6급/11/6000-11-05-銀.md
+++ b/_posts/6급/11/6000-11-05-銀.md
@@ -18,5 +18,5 @@ Examples:
 * 은하 (銀河) galaxy <br><br>
 * 은하수 (銀河水) the Milky Way galaxy <br><br>
 * 은행 (銀行) bank <br><br>
-* 은행 (銀杏) gingko <br><br>
+* 은행 (銀杏) ginkgo <br><br>
 * 은혼식 (銀婚式) 25th wedding anniversary (silver wedding) <br><br>
