--- a/_posts/준7급/7500-12-31-template.md
+++ b/_posts/준7급/7500-12-31-template.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "temp"
 date:   2021-05-04 11:47:10 -0700
-categories: 8급
+categories: 준7급
 permalink: "/:categories/:title.html"
 ---
 
