complete 5/50 characters in 준7급

--- a/_posts/6급/6000-01-01-toc.md
+++ b/_posts/6급/6000-01-01-toc.md
@@ -92,15 +92,15 @@ permalink: "/:categories/toc"
     <td class="tg-li6d">園 <br>동산 원</td>
     <td class="tg-li6d">遠 <br>멀 원</td>
     <td class="tg-li6d">由 <br>말미암을 유</td>
-    <td class="tg-li6d">油 <br>기름 유</td>
-    <td class="tg-li6d">銀 <br>은 은</td>
+    <td class="tg-li6d"><a href="油.html">油 <br>기름 유</a></td>
+    <td class="tg-li6d"><a href="銀.html">銀 <br>은 은</a></td>
   </tr>
   <tr>
-    <td class="tg-li6d">醫 <br>의원 의</td>
-    <td class="tg-li6d">衣 <br>옷 의</td>
-    <td class="tg-li6d">者 <br>놈 자</td>
-    <td class="tg-li6d">章 <br>글 장</td>
-    <td class="tg-li6d">在 <br>있을 재</td>
+    <td class="tg-li6d"><a href="醫.html">醫 <br>의원 의</a></td>
+    <td class="tg-li6d"><a href="衣.html">衣 <br>옷 의</a></td>
+    <td class="tg-li6d"><a href="者.html">者 <br>놈 자</a></td>
+    <td class="tg-li6d"><a href="章.html">章 <br>글 장</a></td>
+    <td class="tg-li6d"><a href="在.html">在 <br>있을 재</a></td>
   </tr>
   <tr>
     <td class="tg-li6d">定 <br>정할 정</td>
