--- a/_posts/준7급/7500-01-01-toc.md
+++ b/_posts/준7급/7500-01-01-toc.md
@@ -19,11 +19,11 @@ permalink: "/:categories/toc"
 <table class="tg">
 <tbody>
   <tr>
-    <td class="tg-li6d">家 <br>집 가</td>
-    <td class="tg-li6d">間 <br>사이 간</td>
-    <td class="tg-li6d">江 <br>강 강</td>
-    <td class="tg-li6d">車 <br>수레 거, <br>수레 차</td>
-    <td class="tg-li6d">工 <br>장인 공</td>
+    <td class="tg-li6d"><a href="家.html">家 <br>집 가</a></td>
+    <td class="tg-li6d"><a href="間.html">間 <br>사이 간</a></td>
+    <td class="tg-li6d"><a href="江.html">江 <br>강 강</a></td>
+    <td class="tg-li6d"><a href="車.html">車 <br>수레 거/차</a></td>
+    <td class="tg-li6d"><a href="工.html">工 <br>장인 공</a></td>
   </tr>
   <tr>
     <td class="tg-li6d">空 <br>빌 공</td>
