complete 10/50 hanja in 준7급

--- a/_posts/6급/6000-01-01-toc.md
+++ b/_posts/6급/6000-01-01-toc.md
@@ -103,8 +103,8 @@ permalink: "/:categories/toc"
     <td class="tg-li6d"><a href="在.html">在 <br>있을 재</a></td>
   </tr>
   <tr>
-    <td class="tg-li6d">定 <br>정할 정</td>
-    <td class="tg-li6d">朝 <br>아침 조</td>
+    <td class="tg-li6d"><a href="定.html">定 <br>정할 정</a></td>
+    <td class="tg-li6d"><a href="朝.html">朝 <br>아침 조</a></td>
     <td class="tg-li6d">族 <br>겨레 족</td>
     <td class="tg-li6d">晝 <br>낮 주</td>
     <td class="tg-li6d">親 <br>친할 친</td>
