--- a/_posts/준7급/7500-01-01-toc.md
+++ b/_posts/준7급/7500-01-01-toc.md
@@ -26,11 +26,11 @@ permalink: "/:categories/toc"
     <td class="tg-li6d"><a href="工.html">工 <br>장인 공</a></td>
   </tr>
   <tr>
-    <td class="tg-li6d">空 <br>빌 공</td>
-    <td class="tg-li6d">氣 <br>기운 기</td>
-    <td class="tg-li6d">記 <br>기록할 기</td>
-    <td class="tg-li6d">男 <br>사내 남</td>
-    <td class="tg-li6d">內 <br>안 내</td>
+    <td class="tg-li6d"><a href="空.html">空 <br>빌 공</a></td>
+    <td class="tg-li6d"><a href="氣.html">氣 <br>기운 기</a></td>
+    <td class="tg-li6d"><a href="記.html">記 <br>기록할 기</a></td>
+    <td class="tg-li6d"><a href="男.html">男 <br>사내 남</a></td>
+    <td class="tg-li6d"><a href="內.html">內 <br>안 내</a></td>
   </tr>
   <tr>
     <td class="tg-li6d">農 <br>농사 농</td>
