begin site overhaul

--- a/_posts/8급/01/8000-01-02-敎.md
+++ b/_posts/8급/01/8000-01-02-敎.md
@@ -6,22 +6,28 @@ categories: 8급
 permalink: "/:categories/:title.html"
 ---
 
-Korean name: 가르칠 교
+Korean name: 가르칠 교 <br><br>
 
-Meaning: to teach, to emulate, teaching, religion
+Meaning: to teach, to emulate, teaching, religion <br><br>
 
 Examples:
-* 교과 (敎科) curriculum <br><br>
-* 교과서 (敎科書) textbook <br><br>
-* 교수 (敎區) 1. act of teaching students; 2. professor <br><br>
-* 교실 (敎室) classroom <br><br>
-* 교양 (敎養) refinement, culture, education <br><br>
-* 교원 (敎員) teacher <br><br>
-* 교육  (敎育)education, training, instruction <br><br>
-* 교육부 (敎育部) Ministry of Education <br><br>
-* 교회 (敎會) Christian church <br><br>
-* 교훈 (敎訓) lesson, moral <br><br>
-* 기독교 (基督敎) Christianity <br><br>
-* 불교 (佛敎) Buddhism <br><br>
-* 유교 (儒敎) Confucianism <br><br>
-* 종교 (宗敎) religion <br><br>
+
+⭐⭐⭐
+* 교과서 (敎科書) <br><br>
+* 교수 (敎區) <br><br>
+* 교실 (敎室) <br><br>
+* 교육  (敎育) <br><br>
+* 교회 (敎會) <br><br>
+
+⭐⭐
+* 교양 (敎養) <br><br>
+* 교훈 (敎訓) <br><br>
+* 기독교 (基督敎) <br><br>
+* 불교 (佛敎) <br><br>
+* 유교 (儒敎) <br><br>
+* 종교 (宗敎) <br><br>
+
+⭐
+* 교과 (敎科) <br><br>
+* 교원 (敎員) <br><br>
+* 교육부 (敎育部) <br><br>
