--- a/_posts/8급/01/8000-01-03-九.md
+++ b/_posts/8급/01/8000-01-03-九.md
@@ -6,12 +6,27 @@ categories: 8급
 permalink: "/:categories/:title.html"
 ---
 
-Korean name: 아홉 구
+Korean name: 아홉 구 <br><br>
 
-Meaning: nine, a large number of something
+Meaning: nine, a large number of something <br><br>
 
 Examples:
-* 구구단 (九九段) multiplication table<br><br>
-* 구미호 (九尾狐) a fox with nine tails, which according to legend was good at attracting people<br><br>
-* 구절판 (九切板) a traditional Korean meal where nine delicacies are arranged in a circular pattern on a platter<br><br>
-* 구천 (九泉) the place where a person's soul goes after death<br><br>
+
+⭐⭐⭐
+* (none) <br><br>
+
+
+⭐⭐
+* (none) <br><br>
+
+
+⭐
+* (none) <br><br>
+
+
+(No stars)
+* 구구단 (九九段) <br><br>
+* 구미호 (九尾狐) <br><br>
+* 구절판 (九切板) <br><br>
+* 구천 (九泉) <br><br>
+* 주먹구구 (주먹九九) <br><br>
