--- a/_posts/8급/01/8000-01-04-國.md
+++ b/_posts/8급/01/8000-01-04-國.md
@@ -6,18 +6,31 @@ categories: 8급
 permalink: "/:categories/:title.html"
 ---
 
-Korean name: 나라 국
+Korean name: 나라 국 <br><br>
 
-Meaning: country, nation
+Meaning: country, nation <br><br>
 
 Examples:
-* 국경 (國境) a nation's borders <br><br>
-* 국군 (國軍) a nation's military <br><br>
-* 국력 (國力) the country's power in various areas such as politics, the economy, culture, the military, etc. <br><br>
-* 국명 (國名) a country's name <br><br>
-* 국무 (國務) state affairs, matters handled by presidents, ministers, etc. <br><br>
-* 국무부 (國務部) the State Department <br><br>
-* 국사 (國事) national affairs <br><br>
-* 국사 (國使) a nation's history <br><br>
-* 국채 (國債) 1. national debt; 2. government bond <br><br>
-* 국토 (國土) a nation's territory <br><br>
+
+⭐⭐⭐
+* 국적 (國籍) <br><br>
+* 국제 (國際) <br><br>
+* 대한민국 (大韓民國) <br><br>
+* 한국 (韓國) <br><br>
+
+⭐⭐
+* 국가 (國家) <br><br>
+* 국립 (國立) <br><br>
+* 국민 (國民) <br><br>
+* 국어 (國語) <br><br>
+
+⭐
+* 건국 (建國) <br><br>
+* 국경 (國境) <br><br>
+* 국군 (國軍) <br><br>
+* 국력 (國力) <br><br>
+* 국무총리 (國務總理) <br><br>
+* 국보 (國寶) <br><br>
+* 국토 (國土) <br><br>
+* 애국 (愛國) <br><br>
+* 조국 (祖國) <br><br>
