--- a/_posts/8급/01/8000-01-05-軍.md
+++ b/_posts/8급/01/8000-01-05-軍.md
@@ -6,23 +6,30 @@ categories: 8급
 permalink: "/:categories/:title.html"
 ---
 
-Korean name: 군사 군
+Korean name: 군사 군 <br><br>
 
-Meaning: military, soldier
+Meaning: military, soldier <br><br>
 
 Examples:
-* 공군 (空軍) air force <br><br>
-* 국군 (國軍) a nation's military <br><br>
-* 군가 (軍歌) a song meant to boost troop morale <br><br>
-* 군대 (軍隊) the military (service) <br><br>
-* 군복 (軍服) military uniform <br><br>
-* 군사 (軍事) things related to the military or war <br><br>
-* 군인 (軍人) soldier <br><br>
-* 군함 (軍艦) naval warship <br><br>
-* 미군 (美軍) US military (related: 주한미군 US Armed Forces Korea) <br><br>
-* 예비군 (豫備軍) reserve forces <br><br>
-* 육군 (陸軍) army <br><br>
-* 장군 (將軍) general officer, admiral <br><br>
-* 적군 (敵軍) enemy forces <br><br>
-* 해군 (海軍) navy <br><br>
-* 해병대 (海兵隊) marine corps <br><br>
+
+⭐⭐⭐
+* 군인 (軍人) <br><br>
+
+
+⭐⭐
+* 군대 (軍隊) <br><br>
+* 군사 (軍事) <br><br>
+* 육군 (陸軍) <br><br>
+
+
+⭐
+* 공군 (空軍) <br><br>
+* 국군 (國軍) <br><br>
+* 장군 (將軍) <br><br>
+* 해군 (海軍) <br><br>
+
+
+(No stars)
+* 미군 (美軍) <br><br>
+* 예비군 (豫備軍) <br><br>
+
