--- a/_posts/8급/02/8000-02-02-南.md
+++ b/_posts/8급/02/8000-02-02-南.md
@@ -6,20 +6,22 @@ categories: 8급
 permalink: "/:categories/:title.html"
 ---
 
-Korean name: 남녘 남
+Korean name: 남녘 남 <br><br>
 
-Meaning: southern, southern country
+Meaning: southern, southern country <br><br>
 
 Examples:
-* 남단 (南端) southernmost part <br><br>
-* 남미 (南美) South America <br><br>
-* 남반구 (南半球) southern hemisphere <br><br>
-* 남부 (南部) southern part <br><br>
-* 남북(南北) North Korea <br><br>
-* 남북전쟁 (南北戰爭) US Civil War <br><br>
-* 남파 (南派) dispatching a spy to the south <br><br>
-* 남풍 (南風) a southward wind <br><br>
-* 남하 (南下) moving southward <br><br>
-* 남향 (南向) southward direction <br><br>
-* 월남 (越南) Vietnam <br><br>
-* 월남하다 (越南하다) 1. to cross a southern border; 2. to defect from North Korea to South Korea <br><br>
+
+⭐⭐⭐
+* 남대문 (南大門) <br><br>
+* 남산 (南山) <br><br>
+
+⭐⭐
+* 남미 (南美) <br><br>
+* 남부 (南部) <br><br>
+* 남북(南北) <br><br>
+
+⭐
+* 남극 (南極) <br><br>
+* 남한 (南韓) <br><br>
+* 남향 (南向) <br><br>
