--- a/_posts/8급/02/8000-02-04-年.md
+++ b/_posts/8급/02/8000-02-04-年.md
@@ -6,25 +6,31 @@ categories: 8급
 permalink: "/:categories/:title.html"
 ---
 
-Korean name: 해 년(연)
+Korean name: 해 년(연) <br><br>
 
-Meaning: year, age
+Meaning: year, age <br><br>
 
 Examples:
-* 내년 (來年) next year <br><br>
-* 매년 (每年) every year <br><br>
-* 미성년 (未成年) a minor; someone who is not yet a legal adult <br><br>
-* 성년 (成年) a legal adult <br><br>
-* 소녀 (少女) girl <br><br>
-* 소년 (少年) boy <br><br>
-* 연간 (年間) a period of one year <br><br>
-* 연금 (年金) pension, annuity <br><br>
-* 연령 (年齡) age <br><br>
-* 연말 (年末) end of the year <br><br>
-* 연봉 (年俸) annual salary <br><br>
-* 연세 (年歲) age (honorific) <br><br>
-* 연초(年初) beginning of the year <br><br>
-* 작년 (昨年) the previous year <br><br>
-* 정년 (停年) retirement age <br><br>
-* 청년 (靑年) an adult who is on the younger side <br><br>
-* 청소년 (靑少年) a person in their teens but not yet an adult<br><br>
+
+⭐⭐⭐
+* 내년 (來年) <br><br>
+* 매년 (每年) <br><br>
+* 연말 (年末) <br><br>
+* 연세 (年歲) <br><br>
+* 작년 (昨年) <br><br>
+* 청년 (靑年) <br><br>
+* 청소년 (靑少年) <br><br>
+
+⭐⭐
+* 미성년자 (未成年者) <br><br>
+* 소년 (少年) <br><br>
+* 연간 (年間) <br><br>
+* 연령 (年齡) <br><br>
+* 연봉 (年俸) <br><br>
+* 재작년 (再昨年) <br><br>
+
+⭐
+* 성년 (成年) <br><br>
+* 연금 (年金) <br><br>
+* 연초(年初) <br><br>
+* 정년 (停年) <br><br>
