--- a/_posts/준7급/01/7500-01-02-間.md
+++ b/_posts/준7급/01/7500-01-02-間.md
@@ -6,32 +6,32 @@ categories: 준7급
 permalink: "/:categories/:title.html"
 ---
 
-Korean name: 사이 간
+Korean name: 사이 간 <br><br>
 
-Meaning: interval, gap (between space or time)
+Meaning: interval, gap (between space or time) <br><br>
 
 Examples:
-* 간격 (間隔) distance between two people or things, an interval of time <br><br>
-* 간식 (間食) a snack, food that one eats between meals <br><br>
-* 간접 (間接) being indirect <br><br>
-  간접흡연 (間接吸煙) secondhand smoking <br><br>
-* 간첩 (間諜) a spy <br><br>
-* 간혹 (間或) every once in a while <br><br>
-* 공간 (空間) an empty space or site <br><br>
-* 구간 (區間) a space, area between two places <br><br>
-* 기간 (期間) a period of time, a term <br><br>
-* 민간 (民間) a civilian, member of the public <br><br>
-* 별안간 (瞥眼間) a period of time so short it is like a blink of the eye <br><br>
-* 순간 (瞬間) a moment, instant <br><br>
-* 시간 (時間) the time; bound noun for a number of hours <br><br>
-  시간대 (時間帶) a time slot  <br><br>
-  시간표 (時間表) a schedule, timetable  <br><br>
-  실시간 (實時間) being in real time, live  <br><br>
-* 야간 (夜間) nighttime <br><br>
-* 인간 (人間) human being <br><br>
-  인간관계 (人間關係) human relationships, interpersonal relationships <br><br>
-  인간성 (人間性) humanity, human nature <br><br>
-* 조만간 (早晩間) (adverb) soon <br><br>
-* 주간 (週間)	a week; bound noun for a number of weeks <br><br>
-* 중간 (中間) the middle of space or time <br><br>
-  중간고사 (中間考査) midterm exam <br><br>
+
+⭐⭐⭐
+* 간식 (間食) <br><br>
+* 기간 (期間) <br><br>
+* 시간 (時間) <br><br>
+* 중간 (中間) <br><br>
+
+⭐⭐
+* 간격 (間隔) <br><br>
+* 공간 (空間) <br><br>
+* 순간 (瞬間) <br><br>
+* 야간 (夜間) <br><br>
+* 인간 (人間) <br><br>
+* 주간 (週間)	<br><br>
+
+⭐
+* 간접 (間接) <br><br>
+* 간첩 (間諜) <br><br>
+* 간혹 (間或) <br><br>
+* 구간 (區間) <br><br>
+* 민간 (民間) <br><br>
+* 별안간 (瞥眼間) <br><br>
+* 조만간 (早晩間) <br><br>
+
