--- a/_posts/준7급/01/7500-01-04-車.md
+++ b/_posts/준7급/01/7500-01-04-車.md
@@ -6,38 +6,34 @@ categories: 준7급
 permalink: "/:categories/:title.html"
 ---
 
-Korean name: 수레 거, 수레 차
+Korean name: 수레 거, 수레 차 <br><br>
 
-Meaning: cart, wagon, wheels of a cart or wagon
+Meaning: cart, wagon, wheels of a cart or wagon <br><br>
 
 Examples:
-* 구급차 (救急車) ambulance<br><br>
-* 기차 (汽車) railroad train <br><br>
-* 세차 (洗車) car wash, car detailing <br><br>
-* 승용차 (乘用車) sedan, passenger car <br><br>
-* 승차 (乘車) the act of getting into a vehicle <br><br>
-* 승차권 (乘車券) a ticket used for boarding a vehicle <br><br>
-* 승합차 (乘合車) van <br><br>
-* 열차 (列車) railroad or subway train <br><br>
-  급행열차 (急行列車) express train <br><br>
-  완행열차 (緩行列車) slow (local) train <br><br>
-* 영구차 (靈柩車) hearse <br><br>
-* 유모차 (乳母車) baby stroller <br><br>
-* 자동차 (自動車) car, automobile <br><br>
-* 자전거 (自轉車) bicycle <br><br>
-* 장갑차 (裝甲車) armored vehicle <br><br>
-* 전동차 (電動車) electricity-powered train <br><br>
-* 전차 (電車) tram <br><br>
-* 주차 (駐車) the act of parking <br><br>
-  주차장 (駐車場) parking lot <br><br>
-* 차도 (車道) road for vehicles <br><br>
-* 차량 (車輛) 1. traffic, the quantity of vehicles; 2. a train car <br><br>
-* 차로 (車路) road for vehicles <br><br>
-* 차선 (車線) traffic lane <br><br>
-* 차주 (車主) the owner of a vehicle <br><br>
-* 차창 (車窓) the window of a vehicle <br><br>
-* 차체 (車體) the body of a vehicle <br><br>
-* 폐차 (廢車) a scrapped vehicle <br><br>
-* 포장마차 (布裝馬車) a mobile cart that sells snacks or drinks <br><br>
-* 하차 (下車) the act of stepping off or getting out of a vehicle <br><br>
-* 화물차 (貨物車)	freight vehicle <br><br>
+
+⭐⭐⭐
+* 기차 (汽車) <br><br>
+* 열차 (列車); see also 급행열차 (急行列車), 완행열차 (緩行列車) <br><br>
+* 자동차 (自動車) <br><br>
+* 자전거 (自轉車) <br><br>
+* 주차 (駐車) <br><br>
+* 주차장 (駐車場) <br><br>
+
+
+⭐⭐
+* 세차 (洗車) <br><br>
+* 승용차 (乘用車) <br><br>
+* 승차 (乘車) <br><br>
+* 승차권 (乘車券) <br><br>
+* 차도 (車道) <br><br>
+* 차량 (車輛) <br><br>
+* 차로 (車路) <br><br>
+* 차선 (車線) <br><br>
+* 차창 (車窓) <br><br>
+* 하차 (下車) <br><br>
+
+⭐
+* 구급차 (救急車) <br><br>
+* 승합차 (乘合車)<br><br>
+* 포장마차 (布裝馬車) <br><br>
