--- a/_posts/준7급/01/7500-01-05-工.md
+++ b/_posts/준7급/01/7500-01-05-工.md
@@ -6,21 +6,25 @@ categories: 준7급
 permalink: "/:categories/:title.html"
 ---
 
-Korean name: 장인 공
+Korean name: 장인 공 <br><br>
 
-Meaning: craftsman, artisan, technique, skill, labor
+Meaning: craftsman, artisan, technique, skill, labor <br><br>
 
 Examples:
-* 가공 (加工) processing, the act of turning raw materials into a new product <br><br>
-* 공과대학 (工科大學) an engineering college <br><br>
-* 공대생 (工大生) an engineering student <br><br>
-* 공부 (工夫) studying <br><br>
-* 공사 (工事) construction of a building or facility <br><br>
-* 공사장 (工事場) construction site <br><br>
-* 공산품 (工産品) a product made in a factory <br><br>
-* 공업 (工業) manufacturing industry <br><br>
-* 공예 (工藝) craftsmanship <br><br>
-* 공장 (工場) factory <br><br>
-* 공학 (工學) the study of engineering <br><br>
-* 인공 (人工) being artificial, man-made <br><br>
-* 인공위성(人工衛星) satellite <br><br>
+
+⭐⭐⭐
+* 공부 (工夫) <br><br>
+* 공장 (工場) <br><br>
+
+⭐⭐
+* 공사 (工事) <br><br>
+* 공업 (工業) <br><br>
+* 인공 (人工) <br><br>
+
+⭐
+* 가공 (加工) <br><br>
+* 공사장 (工事場) <br><br>
+* 공산품 (工産品) <br><br>
+* 공예 (工藝) <br><br>
+* 공학 (工學) <br><br>
+* 인공위성(人工衛星) <br><br>
