--- a/_posts/준7급/02/7500-02-02-氣.md
+++ b/_posts/준7급/02/7500-02-02-氣.md
@@ -6,41 +6,42 @@ categories: 준7급
 permalink: "/:categories/:title.html"
 ---
 
-Korean name: 기운 기
+Korean name: 기운 기 <br><br>
 
-Meaning: spirit, energy, air
+Meaning: spirit, energy, air <br><br>
 
 Examples:
-* 감기 (感氣) a cold <br><br>
-* 경기 (景氣) economy <br><br>
-  불경기 (不景氣) economic recession <br><br>
-  호경기 (好景氣) economic prosperity <br><br>
-* 공기 (空氣) air, atmosphere <br><br>
-* 기력 (氣力) physical or mental energy to be active <br><br>
-* 기분 (氣分) 1. one's mood or feelings; 2. the atmosphere, mood of the surroundings <br><br>
-* 기상 (氣象) weather <br><br>
-* 기상청 (氣象廳) Korean Meteorological Administration <br><br>
-* 기세 (氣勢) force, vigor <br><br>
-* 기압 (氣壓) air pressure <br><br>
-  고기압 (高氣壓) high air pressure <br><br>
-  저기압 (低氣壓) low air pressure <br><br>
-* 기온 (氣溫) air temperature <br><br>
-* 기운 (氣韻) the force, spirit, or energy that causes living things to move <br><br>
-* 기질 (氣質) temperament, disposition <br><br>
-* 기체 (氣體) gas (related: 고체, 액체) <br><br>
-* 기후 (氣候) climate <br><br>
-* 대기 (大氣) atmosphere, the air that surrounds the earth <br><br>
-* 분위기 (雰圍氣) mood, ambience, or atmosphere of the surroundings <br><br>
-* 생기 (生氣) liveliness, vitality <br><br>
-* 수증기 (水蒸氣) vapor, steam <br><br>
-* 연기 (煙氣) smoke from something burning <br><br>
-* 열기 (熱氣) heat, fever, excitement <br><br>
-* 오기 (傲氣) 1. being stubborn and obstinate; 2. putting on airs in an impolite manner <br><br>
-* 용기 (勇氣) courage, bravery <br><br>
-* 인기 (人氣) popularity <br><br>
-* 일기 (日氣) weather <br><br>
-  일기예보 (日氣豫報) weather forecast <br><br>
-* 전기 (電氣) electricity <br><br>
-* 패기 (覇氣) fighting spirit, ambitious spirit <br><br>
-* 향기 (香氣) pleasant fragrance, aroma <br><br>
-* 환기 (換氣) ventilation, change of air <br><br>
+
+⭐⭐⭐
+* 감기 (感氣) <br><br>
+* 기분 (氣分) <br><br>
+* 기온 (氣溫) <br><br>
+* 분위기 (雰圍氣) <br><br>
+* 인기 (人氣) <br><br>
+* 전기 (電氣) <br><br>
+
+
+⭐⭐
+* 경기 (景氣); see also 불경기 (不景氣), 호경기 (好景氣) <br><br>
+* 공기 (空氣) <br><br>
+* 기운 (氣韻) <br><br>
+* 기후 (氣候) <br><br>
+* 대기 (大氣) <br><br>
+* 생기 (生氣) <br><br>
+* 연기 (煙氣) <br><br>
+* 열기 (熱氣) <br><br>
+* 용기 (勇氣) <br><br>
+* 향기 (香氣) <br><br>
+
+
+⭐
+* 기력 (氣力) <br><br>
+* 기상 (氣象); see also 기상청 (氣象廳) <br><br>
+* 기세 (氣勢) <br><br>
+* 기압 (氣壓); see also 고기압 (高氣壓), 저기압 (低氣壓) <br><br>
+* 기질 (氣質) <br><br>
+* 기체 (氣體) <br><br>
+* 수증기 (水蒸氣) <br><br>
+* 오기 (傲氣) <br><br>
+* 패기 (覇氣) <br><br>
+* 환기 (換氣) <br><br>
