--- a/_posts/준7급/02/7500-02-05-內.md
+++ b/_posts/준7급/02/7500-02-05-內.md
@@ -6,25 +6,24 @@ categories: 준7급
 permalink: "/:categories/:title.html"
 ---
 
-Korean name: 안 내
+Korean name: 안 내 <br><br>
 
-Meaning: inside, interior, domestic
+Meaning: inside, interior, domestic <br><br>
 
 Examples:
-* 구내 (構內) being inside a large building or facility, such as a hospital or company <br><br>
-* 국내 (國內) domestic, being within a nation's borders <br><br>
-* 기내 (機內) being inside an airplane <br><br>
-  기내식 (機內食) an in-flight meal <br><br>
-* 내각 (內閣) appointed ministers of a nation's government, the Cabinet <br><br>
-* 내과 (內科) internal medicine department <br><br>
-* 내무부 (內務部) Ministry of Home Affairs, Department of the Interior <br><br>
-* 내복 (內服) thermal layer worn on the body to block cold temperatures <br><br>
-* 내부 (內部) the inside, interior <br><br>
-* 내부자거래 (內部者去來) insider trading/dealing <br><br>
-* 내시경 (內視鏡) endoscope <br><br>
-* 내용 (內容) content, details, circumstances <br><br>
-* 내장 (內臟) internal organs <br><br>
-* 내전 (內戰) civil war <br><br>
-* 시내 (市內) being in the city, downtown <br><br>
-* 실내 (室內) indoors <br><br>
-* 안내 (案內) introduction, guidance, advisement <br><br>
+
+⭐⭐⭐
+* 국내 (國內) <br><br>
+* 내과 (內科) <br><br>
+* 내용 (內容) <br><br>
+* 시내 (市內) <br><br>
+* 안내 (案內) <br><br>
+
+⭐⭐
+* 내부 (內部); see also 내부자거래 (內部者去來) <br><br>
+* 실내 (室內) <br><br>
+
+⭐
+* 기내 (機內) <br><br>
+* 내복 (內服) <br><br>
+* 내장 (內臟) <br><br>
