--- a/_posts/준7급/7500-01-01-toc.md
+++ b/_posts/준7급/7500-01-01-toc.md
@@ -33,8 +33,8 @@ permalink: "/:categories/toc"
     <td class="tg-li6d"><a href="內.html">內 <br>안 내</a></td>
   </tr>
   <tr>
-    <td class="tg-li6d">農 <br>농사 농</td>
-    <td class="tg-li6d">答 <br>대답 답</td>
+    <td class="tg-li6d"><a href="農.html">農 <br>농사 농</a></td>
+    <td class="tg-li6d"><a href="答.html">答 <br>대답 답</a></td>
     <td class="tg-li6d">道 <br>길 도</td>
     <td class="tg-li6d">動 <br>움직일 동</td>
     <td class="tg-li6d">力 <br>힘 력</td>
