--- a/_posts/준7급/7500-12-31-template.md
+++ b/_posts/준7급/7500-12-31-template.md
@@ -6,11 +6,13 @@ categories: 준7급
 permalink: "/:categories/:title.html"
 ---
 
-Korean name: 
+Korean name:  <br><br>
 
-Meaning: 
+Meaning:  <br><br>
 
 Examples:
+
+⭐⭐⭐
 *  <br><br>
 *  <br><br>
 *  <br><br>
