--- a/_posts/8급/02/8000-02-01-金.md
+++ b/_posts/8급/02/8000-02-01-金.md
@@ -6,28 +6,32 @@ categories: 8급
 permalink: "/:categories/:title.html"
 ---
 
-Korean name: 쇠 금, 성 김
+Korean name: 쇠 금, 성 김 <br><br>
 
-Meaning: metal, gold, precious, surname 김
+Meaning: metal, gold, precious, surname 김 <br><br>
 
 Examples:
-* 금액 (金額) an amount of money <br><br>
-* 금융 (金額) finance, financial <br><br>
-* 기금 (基金) a fund used for a purpose, business, event, etc. <br><br>
-* 기부금 (寄附金) donation money <br><br>
-* 등록금 (登錄金) tuition fee <br><br>
-* 모금 (募金) fundraising <br><br>
-* 벌금 (罰金) penalty, fine <br><br>
-* 세금 (稅金) tax <br><br>
-* 송금 (送金) remittance <br><br>
-* 연금 (年金) pension, annuity <br><br>
-* 요금 (料金) fee, fare <br><br>
-* 임금 (任金) wage, pay <br><br>
-* 입금 (入金) deposit in a financial institution <br><br>
-* 자금 (資金) capital (money used for running a business), fund <br><br>
-* 장학금 (奬學金) scholarship, grant <br><br>
-* 저금 (貯金) savings in a financial institution <br><br>
-* 출금 (出金)  withdrawal from a financial institution <br><br>
-* 포상금 (褒償金) prize money for a job well done <br><br>
-* 황금 (黃金) 1. yellow gold; 2. (figurative) money or assets; 3. (figurative) something precious and valuable <br><br>
-* 후원금 (後援金) financial support to an individual/organizational activity, business, etc. <br><br>
+
+⭐⭐⭐
+* 요금 (料金) <br><br>
+* 저금 (貯金) <br><br>
+
+⭐⭐
+* 금액 (金額) <br><br>
+* 금융 (金額) <br><br>
+* 등록금 (登錄金) <br><br>
+* 모금 (募金) <br><br>
+* 벌금 (罰金) <br><br>
+* 세금 (稅金) <br><br>
+* 임금 (任金) <br><br>
+* 입금 (入金) <br><br>
+* 장학금 (奬學金) <br><br>
+
+⭐
+* 기금 (基金) <br><br>
+* 기부금 (寄附金) <br><br>
+* 송금 (送金) <br><br>
+* 연금 (年金) <br><br>
+* 자금 (資金) <br><br>
+* 출금 (出金) <br><br>
+* 황금 (黃金) <br><br>
