--- a/_posts/8급/02/8000-02-03-女.md
+++ b/_posts/8급/02/8000-02-03-女.md
@@ -6,20 +6,26 @@ categories: 8급
 permalink: "/:categories/:title.html"
 ---
 
-Korean name: 여자 녀(여)
+Korean name: 여자 녀(여) <br><br>
 
-Meaning: woman, daughter
+Meaning: woman, daughter <br><br>
 
 Examples:
-* 남녀 (男女) man and woman <br><br>
-* 마녀 (魔女) a woman said to use magic to harm people <br><br>
-* 부녀자 (婦女子) a married woman or a woman of advanced years <br><br>
-* 소녀 (少女) a girl <br><br>
-* 손녀 (孫女) granddaughter <br><br>
-* 숙녀 (淑女) 1. a refined and dignified lady; 2. (dignifying) a woman, lady <br><br>
-* 여성 (女性) a woman, lady <br><br>
-* 장녀 (長女) eldest daughter <br><br>
-* 차녀 (次女) second eldest daughter <br><br>
-* 처녀 (處女) 1. an unmarried woman; 2. a virgin <br><br>
-* 해녀 (海女) haenyeo (female diver) <br><br>
-* 효녀 (孝女) a filial daughter <br><br>
+
+⭐⭐⭐
+* 남녀 (男女) <br><br>
+* 손녀 (孫女) <br><br>
+* 여성 (女性) <br><br>
+
+⭐⭐
+* 소녀 (少女) <br><br>
+* 숙녀 (淑女) <br><br>
+* 처녀 (處女) <br><br>
+
+⭐
+* 남녀노소 (男女老少) <br><br>
+* 남녀평등 (男女平等) <br><br>
+* 효녀 (孝女) <br><br>
+
+(No stars)
+* 해녀 (海女) <br><br>
