--- a/_posts/준7급/01/7500-01-01-家.md
+++ b/_posts/준7급/01/7500-01-01-家.md
@@ -6,36 +6,38 @@ categories: 준7급
 permalink: "/:categories/:title.html"
 ---
 
-Korean name: 집 가
+Korean name: 집 가 <br><br>
 
-Meaning: house, home, family
+Meaning: house, home, family <br><br>
 
 Examples:
-* -가 (-家) a suffix used to indicate a person who does something professionally or has expertise in something <br><br>
-  건축가 (建築家) architect  <br><br>
-  미술가 (美術家) artist  <br><br>
-  사업가 (事業家) entrepreneur  <br><br>
-  소설가 (小說家) novelist  <br><br>
-  예술가 (藝術家) artist  <br><br>
-  유가 (儒家) Confucian scholar <br><br>
-  음악가 (音樂家) musician  <br><br>
-  작가 (作家) writer  <br><br>
-  작곡가 (作曲家) composer  <br><br>
-  전문가 (專門家) expert, specialist  <br><br>
-  정치가 (政治家) politician  <br><br>
-* 가구 (家具) furniture <br><br>
-* 가구 (家口) a household <br><br>
-* 가문 (家門) a group of people descended from the same ancestor; the social status of such a group <br><br>
-* 가장 (家長) the head of a household <br><br>
-* 가족 (家族) family <br><br>
-  핵가족 (核家族) nuclear family, meaning a household with only parents and children, and without extended relatives <br><br>
-* 가전 (家電) household appliances or electronics <br><br>
-* 가정 (家庭) home, family <br><br>
-* 가풍 (家風) family tradition <br><br>
-* 가축 (家畜) farm animals that are raised on a family property (often cows, horses, pigs, chickens, etc.) <br><br>
-* 가출 (家出) running away from home <br><br>
-* 국가 (國家) nation, country <br><br>
-* 자가 (自家) 1. one's own house; 2. oneself <br><br>
-  자가격리 (自家隔離) self-isolation, self-quarantine <br><br>
-  자가용 (自家用) for private use <br><br>
-* 자가면역질환 (自家免疫疾患) autoimmune disease <br><br>
+
+⭐⭐⭐
+* 가구 (家具) <br><br>
+* 가족 (家族) <br><br>
+
+⭐⭐
+* -가 (-家) a suffix used to indicate a person who does something professionally or has expertise in something; examples: <br><br>
+  건축가 (建築家) <br><br>
+  미술가 (美術家) <br><br>
+  사업가 (事業家) <br><br>
+  소설가 (小說家) <br><br>
+  예술가 (藝術家) <br><br>
+  유가 (儒家) <br><br>
+  음악가 (音樂家) <br><br>
+  작가 (作家) <br><br>
+  작곡가 (作曲家) <br><br>
+  전문가 (專門家) <br><br>
+  정치가 (政治家) <br><br>
+* 가구 (家口) <br><br>
+* 가장 (家長) <br><br>
+* 가정 (家庭) <br><br>
+* 국가 (國家) <br><br>
+
+⭐
+* 가문 (家門) <br><br>
+* 핵가족 (核家族) <br><br>
+* 가축 (家畜) <br><br>
+* 가출 (家出) <br><br>
+* 자가 (自家) <br><br>
+
