--- a/_posts/준7급/01/7500-01-03-江.md
+++ b/_posts/준7급/01/7500-01-03-江.md
@@ -6,14 +6,19 @@ categories: 준7급
 permalink: "/:categories/:title.html"
 ---
 
-Korean name: 강 강
+Korean name: 강 강 <br><br>
 
-Meaning: large river
+Meaning: large river <br><br>
 
 Examples:
-* 강변 (江邊) riverside <br><br>
-* 강산 (江山) 1. nature, usually meaning scenery that includes rivers and mountains; 2. a country’s territory <br><br>
-* 강수 (江水) river water <br><br>
-* 강심 (江心) the middle of a river <br><br>
-* 강폭 (江幅) the width of a river <br><br>
-* 강호 (江湖) rivers and lakes <br><br>
+
+⭐⭐⭐
+* 한강 (漢江) <br><br>
+
+⭐⭐
+* 강물 (江물) <br><br>
+
+⭐
+* 강산 (江山) <br><br>
+
+
