--- a/_posts/준7급/02/7500-02-01-空.md
+++ b/_posts/준7급/02/7500-02-01-空.md
@@ -6,24 +6,27 @@ categories: 준7급
 permalink: "/:categories/:title.html"
 ---
 
-Korean name: 빌 공
+Korean name: 빌 공 <br><br>
 
-Meaning: empty, hollow
+Meaning: empty, hollow <br><br>
 
 Examples:
-* 공간 (空間) an empty space or site <br><br>
-* 공군 (空軍) air force <br><br>
-* 공기 (空氣) air, atmosphere <br><br>
-  공기 청정기 (空氣淸淨機) air purifier <br><br>
-* 공기 (空器) unit for counting the number of bowls of rice <br><br>
-* 공백 (空白) 1. a blank portion of a sheet of paper or book; 2. vacuum, a state of emptiness; 3. a gap or pause in one's career <br><br>
-* 공상 (空想) fantasy, daydream <br><br>
-  공상과학소설 (空想科學小說) science fiction novel <br><br>
-* 공중 (空中) air (that is, the space between the ground and the sky) <br><br>
-* 공책 (空冊) notebook, a book of blank paper to write or draw in <br><br>
-* 공항 (空港) airport <br><br>
-* 육해공 (陸海空) land, sea, and air <br><br>
-* 항공 (航空) aviation, flight <br><br>
-  항공기 (航空機) aircraft <br><br>
-  항공사 (航空社) airline <br><br>
-* 허공 (虛空) the air, sky <br><br>
+
+⭐⭐⭐
+* 공책 (空冊) <br><br>
+* 공항 (空港) <br><br>
+* 항공 (航空); see also 항공권 (航空券), 항공료 (航空料), 항공기 (航空機), 항공사 (航空社) <br><br>
+
+
+⭐⭐
+* 공간 (空間) <br><br>
+* 공기 (空氣) <br><br>
+* 공기 (空器) <br><br>
+
+
+⭐
+* 공군 (空軍) <br><br>
+* 공백 (空白) <br><br>
+* 공상 (空想) <br><br>
+* 공중 (空中) <br><br>
+* 허공 (虛空) <br><br>
